--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,15 @@ GEMINI_API_KEY=
 # Optional: Bright Data Web Unlocker API Key (for bypassing anti-scraping)
 # Get from: https://brightdata.com/
 WEB_UNLOCKER_API_KEY=
+
+# =============================================================================
+# PRODUCTION ENVIRONMENT VARIABLES (RENDER)
+# =============================================================================
+# These will be set automatically by Render when you create a PostgreSQL database
+
+# Database connection string (Render provides this)
+# DATABASE_URL=postgresql://username:password@hostname:5432/database_name
+
+# Secret keys for production (generate secure random values)
+# SECRET_KEY=your-secure-random-secret-key-here
+# JWT_SECRET_KEY=your-jwt-secret-key-here
