--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,29 @@
+# Kenya Road Safety - Production Requirements
+# Install with: pip install -r requirements.txt
+
+# Web Framework
+Flask==3.0.0
+Flask-SQLAlchemy==3.1.1
+Flask-CORS==4.0.0
+
+# Database
+psycopg2-binary==2.9.9
+SQLAlchemy==2.0.23
+
+# Authentication
+PyJWT==2.8.0
+Werkzeug==3.0.1
+
+# Machine Learning
+numpy==1.26.2
+scikit-learn==1.3.2
+
+# Utilities
+python-dotenv==1.0.1
+gunicorn==21.2.0
+
+# Your existing scraping dependencies
 google-generativeai==0.8.3
 requests==2.32.3
 beautifulsoup4==4.12.3
 markdownify==0.13.1
-python-dotenv==1.0.1
