--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,9 @@ SQLAlchemy==2.0.23
 PyJWT==2.8.0
 Werkzeug==3.0.1
 
-# Machine Learning
-numpy==1.26.2
-scikit-learn==1.3.2
+# Machine Learning (pre-built wheels for 3.11)
+numpy==1.24.3
+scikit-learn==1.4.1.post1
 
 # Utilities
 python-dotenv==1.0.1
